<resources>
    <string name="app_name">GhostPy</string>
    <string name="ghostpy">GhostPy</string>
    <string name="an_encryption_and_decryption_application">An Encryption and Decryption Application</string>
    <string name="select_a_file">Choose file</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="choose_an_option">Choose an option ?</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="todo">TODO</string>
</resources>
