<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        >


    <ImageView
            android:layout_width="161dp"
            android:layout_height="119dp"
            app:srcCompat="@drawable/logo"
            android:background="@android:color/white"
            android:scaleType="fitCenter"
            android:contentDescription="@string/todo"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/logo"/>

    <TextView
            android:text="@string/ghostpy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ghostpy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            android:gravity="center"/>

    <TextView
            android:text="@string/an_encryption_and_decryption_application"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ghostpy_info"
            app:layout_constraintTop_toBottomOf="@+id/ghostpy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="12sp"
            android:gravity="center"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="329dp"
            android:layout_height="205dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ghostpy"
            android:layout_marginTop="40dp"
            android:id="@+id/frameLayout"
            >

        <Button
                android:id="@+id/select_file"
                android:text="@string/select_a_file"
                android:layout_width="144dp"
                android:layout_height="36dp"

                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="#FFFFFF"
                android:background="#2196F3"/>

        <TextView
                android:layout_width="325dp"
                android:layout_height="62dp"
                android:id="@+id/file_view"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/select_file"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="#4CAF50"/>

        <EditText
                android:layout_width="230dp"
                android:layout_height="43dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password"
                android:gravity="center"
                android:autofillHints=""
                android:hint="@string/enter_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/file_view"
                android:layout_marginTop="8dp"/>

        <EditText
                android:layout_width="230dp"
                android:layout_height="43dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/c_password"
                android:gravity="center"
                android:autofillHints=""
                android:hint="@string/confirm_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintTop_toBottomOf="@+id/password"
                android:layout_marginTop="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/end_layout"
            android:padding="16dp"

            android:orientation="vertical"
            android:layout_width="342dp"
            android:layout_height="226dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp"
            app:layout_constraintVertical_bias="0.086">


        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_an_option"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:lineSpacingExtra="8sp"
                android:padding="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

        <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="222dp"
                android:layout_height="79dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:gravity="center"
                >

            <RadioButton
                    android:id="@+id/EncryptButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/encrypt"
                    android:padding="5dp"
                    android:lineSpacingExtra="8sp"
                    android:gravity="center"
                    />

            <RadioButton
                    android:id="@+id/DecryptButton"
                    android:text="@string/decrypt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:gravity="center"
                    android:lineSpacingExtra="8sp"/>
        </RadioGroup>

        <Button
                android:id="@+id/submit_button"
                android:layout_width="87dp"
                android:layout_height="37dp"
                android:text="@string/submit"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintTop_toBottomOf="@+id/radio_group"
                android:layout_marginTop="26dp"
                android:background="#2196F3"
                android:textColor="#FFFFFF"/>

        <Button
                android:id="@+id/reset"
                android:layout_width="87dp"
                android:layout_height="38dp"
                android:text="@string/clear"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="26dp"
                app:layout_constraintTop_toBottomOf="@+id/radio_group"
                android:background="#2196F3"
                android:textColor="#FFFFFF"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>